Added icons, header and footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="./script.js"></script>
 </head>
+
 <body>
-    
+    <header>
+        <p class="title">Rock, Paper Scissors Game</p>
+    </header>
+    <main class="container">
+        <div class="howToPlay"></div>
+        <div class="game">
+            <div class="playerChoice">
+                <img src="./img/icon-rock.svg" alt="Rock icon">
+                <img src="./img/icon-paper.svg" alt="Paper icon">
+                <img src="./img/icon-scissors.svg" alt="Scissors icon">
+            </div>
+            <div class="computerChoice"></div>
+            <div class="result">
+            </div>
+        </div>
+
+    </main>
+    <footer>
+        <p>Icons by <a href="https://thenounproject.com/cristiano.zoucas/">Cristiano Zoucas from Noun Project</a></p>
+        <p>Copyright © <a href="https://www.theodinproject.com/about"> The Odin Project 2023</a></p>
+    </footer>
 </body>
 </html>
