--- a/index.html
+++ b/index.html
@@ -7,29 +7,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="./script.js"></script>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <header>
-        <p class="title">Rock, Paper Scissors Game</p>
+        <h2 class="title">Rock, Paper Scissors Game</h2>
     </header>
     <main class="container">
-        <div class="howToPlay"></div>
+        <div class="howToPlay">
+            <h2>How to Play</h2>
+            <ol>
+                <li>Click on the icon you want to play the round</li>
+                <li>A random choice from the computer will appear on the right side</li>
+                <li>The rule to decide the winner is pretty simple:</li>
+                <ul>
+                    <li>Same icon it's a draw</li>
+                    <li>Rock crushes Scissors</li>
+                    <li>Scissors cuts paper</li>
+                    <li>Paper covers Rock</li>
+                </ul>
+                <li>You can see the rounds results under the icons</li>
+                <li>The first to win 5 rounds wins the game</li>
+            </ol>
+        </div>
+        <button>Start Game</button>
         <div class="game">
-            <div class="playerChoice">
-                <img src="./img/icon-rock.svg" alt="Rock icon">
-                <img src="./img/icon-paper.svg" alt="Paper icon">
-                <img src="./img/icon-scissors.svg" alt="Scissors icon">
-            </div>
-            <div class="computerChoice"></div>
-            <div class="result">
-            </div>
+                <div class="playerChoice">
+                    <div class="rock">
+                        <img src="./img/icon-rock.svg" alt="Rock icon"><br>Rock
+                    </div>
+                    <div class="paper">
+                        <img src="./img/icon-paper.svg"     alt="Paper icon"><br>Paper
+                     </div>
+                     <div class="scissors">
+                        <img src="./img/icon-scissors.svg" alt="Scissors icon"><br>Scissors
+                    </div>
+                </div>
+                <div class="computerChoice">
+                    <h2>ComputerChoice</h2>
+                </div>
+        </div>
+        <div class="result">
         </div>
 
     </main>
     <footer>
-        <p>Icons by <a href="https://thenounproject.com/cristiano.zoucas/">Cristiano Zoucas from Noun Project</a></p>
         <p>Copyright © <a href="https://www.theodinproject.com/about"> The Odin Project 2023</a></p>
+        <p>Icons by <a href="https://thenounproject.com/cristiano.zoucas/">Cristiano Zoucas from Noun Project</a></p>     
     </footer>
 </body>
+
 </html>
