Added result msg and restart button

--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
         <p>Copyright © <a href="https://www.theodinproject.com/about"> The Odin Project 2023</a></p>
         <p>Icons by <a href="https://thenounproject.com/cristiano.zoucas/">Cristiano Zoucas</a></p>
     </footer>
+    <div class="overlay hidden"></div>
+    <div class="restartMsg hidden">
+        <h1 class="resultMsg"></h1>
+        <button class="restartBtn">Play Again</button>
+    </div>
 </body>
 <script type="text/javascript" src="./script.js"></script>
 
