Changed color scheme

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <h1 class="title">Rock, Paper Scissors Game</h1>
     </header>
     <main>
